// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsiblePanel should render default with expanded key/value content 1`] = `
<div class="panel panel-default theme-tc-collapsible-panel theme-default-panel theme-open panel panel-default">
  <div class="panel-heading">
    <div class="panel-title">
      <div class="theme-panel-header-content panel-header-content">
        <button type="button"
                class="theme-panel-title btn btn-link"
        >
          <div class="theme-panel-title">
            <div class="theme-undefined theme-col-4">
              <div role="status"
                   class="theme-tc-status tc-status theme-action"
              >
                <span class="theme-tc-status-icon tc-status-icon theme-info">
                  <coral.icon name="fa fa-check">
                  </coral.icon>
                </span>
                <span class="theme-tc-status-label tc-status-label theme-info">
                  inProgress
                </span>
                <div class="tc-actions theme-tc-status-actions tc-status-actions btn-group">
                  <coral.button aria-label="cancel"
                                icon="fa fa-cancel"
                                class
                  >
                    cancel
                  </coral.button>
                  <coral.button aria-label="delete"
                                icon="fa fa-delete"
                                class
                  >
                    delete
                  </coral.button>
                </div>
              </div>
            </div>
            <div class="theme-undefined theme-col-4">
              <coral.tooltip title="edit"
                             placement="right"
              >
                <coral.button aria-label="edit"
                              icon="fa fa-edit"
                              class="theme-undefined btn-icon-only"
                >
                  edit
                </coral.button>
              </coral.tooltip>
            </div>
            <div class="theme-undefined theme-col-4">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                by Charles
              </div>
            </div>
            <div class="theme-group theme-col-4">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                on TDP
              </div>
              <coral.tag class="theme-undefined"
                         aria-describedby="42"
              >
                XML
              </coral.tag>
            </div>
          </div>
        </button>
        <coral.tooltip title="Collapse panel"
                       placement="top"
        >
          <coral.toggle aria-expanded="true"
                        class="theme-toggle toggle tc-icon-toggle theme-tc-icon-toggle active"
                        icon="talend-caret-down"
          >
            Collapse panel
          </coral.toggle>
        </coral.tooltip>
      </div>
    </div>
  </div>
  <div class="panel-collapse collapse in">
    <div class="panel-body">
      <dl class="theme-content">
        <dt class="theme-label">
          <coral.tag>
            Content
          </coral.tag>
        </dt>
        <dd class="theme-description">
          Description3
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render default with key/value content 1`] = `
<div class="panel panel-default theme-tc-collapsible-panel theme-default-panel panel panel-default">
  <div class="panel-heading">
    <div class="panel-title">
      <div class="theme-panel-header-content panel-header-content">
        <button type="button"
                class="theme-panel-title btn btn-link"
        >
          <div class="theme-panel-title">
            <div class="theme-undefined theme-col-4">
              <div role="status"
                   class="theme-tc-status tc-status theme-action"
              >
                <span class="theme-tc-status-icon tc-status-icon theme-info">
                  <coral.icon name="fa fa-check">
                  </coral.icon>
                </span>
                <span class="theme-tc-status-label tc-status-label theme-info">
                  inProgress
                </span>
                <div class="tc-actions theme-tc-status-actions tc-status-actions btn-group">
                  <coral.button aria-label="cancel"
                                icon="fa fa-cancel"
                                class
                  >
                    cancel
                  </coral.button>
                  <coral.button aria-label="delete"
                                icon="fa fa-delete"
                                class
                  >
                    delete
                  </coral.button>
                </div>
              </div>
            </div>
            <div class="theme-undefined theme-col-4">
              <coral.tooltip title="edit"
                             placement="right"
              >
                <coral.button aria-label="edit"
                              icon="fa fa-edit"
                              class="theme-undefined btn-icon-only"
                >
                  edit
                </coral.button>
              </coral.tooltip>
            </div>
            <div class="theme-undefined theme-col-4">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                by Charles
              </div>
            </div>
            <div class="theme-group theme-col-4">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                on TDP
              </div>
              <coral.tag class="theme-undefined"
                         aria-describedby="42"
              >
                XML
              </coral.tag>
            </div>
          </div>
        </button>
        <coral.tooltip title="Expand panel"
                       placement="top"
        >
          <coral.toggle class="theme-toggle toggle tc-icon-toggle theme-tc-icon-toggle"
                        icon="talend-caret-down"
          >
            Expand panel
          </coral.toggle>
        </coral.tooltip>
      </div>
    </div>
  </div>
  <div class="panel-collapse collapse">
    <div class="panel-body">
      <dl class="theme-content">
        <dt class="theme-label">
          <coral.tag>
            Content
          </coral.tag>
        </dt>
        <dd class="theme-description">
          Description3
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render default without content 1`] = `
<div class="panel panel-default theme-tc-collapsible-panel theme-default-panel panel panel-default">
  <div class="panel-heading">
    <div class="panel-title">
      <div class="theme-panel-header-content panel-header-content">
        <button type="button"
                class="theme-panel-title btn btn-link"
        >
          <div class="theme-panel-title">
            <div class="theme-undefined theme-col-4">
              <div role="status"
                   class="theme-tc-status tc-status theme-action"
              >
                <span class="theme-tc-status-icon tc-status-icon theme-info">
                  <coral.icon name="fa fa-check">
                  </coral.icon>
                </span>
                <span class="theme-tc-status-label tc-status-label theme-info">
                  inProgress
                </span>
                <div class="tc-actions theme-tc-status-actions tc-status-actions btn-group">
                  <coral.button aria-label="cancel"
                                icon="fa fa-cancel"
                                class
                  >
                    cancel
                  </coral.button>
                  <coral.button aria-label="delete"
                                icon="fa fa-delete"
                                class
                  >
                    delete
                  </coral.button>
                </div>
              </div>
            </div>
            <div class="theme-undefined theme-col-4">
              <coral.tooltip title="edit"
                             placement="right"
              >
                <coral.button aria-label="edit"
                              icon="fa fa-edit"
                              class="theme-undefined btn-icon-only"
                >
                  edit
                </coral.button>
              </coral.tooltip>
            </div>
            <div class="theme-undefined theme-col-4">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                by Charles
              </div>
            </div>
            <div class="theme-group theme-col-4">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                on TDP
              </div>
              <coral.tag class="theme-undefined"
                         aria-describedby="42"
              >
                XML
              </coral.tag>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="panel-collapse collapse">
    <div class="panel-body">
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render panel with custom element 1`] = `
<div class="panel panel-default theme-tc-collapsible-panel theme-default-panel panel panel-default">
  <div class="panel-heading">
    <div class="panel-title">
      <div class="theme-panel-header-content panel-header-content">
        <button type="button"
                class="theme-panel-title btn btn-link"
        >
          <div class="theme-panel-title">
            <div class="theme-undefined theme-col-3">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                Version 1 Version 1
              </div>
            </div>
            <div class="theme-undefined theme-col-3">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                <span>
                  Custom element
                </span>
              </div>
            </div>
            <div class="theme-undefined theme-col-3">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                03/02/2017 14:44:55
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="panel-collapse collapse">
    <div class="panel-body">
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render themed with textual content 1`] = `
<div class="panel panel-default theme-tc-collapsible-panel theme-descriptive-panel panel panel-default">
  <div class="panel-heading">
    <div class="panel-title">
      <div class="theme-panel-header-content panel-header-content">
        <button type="button"
                class="theme-panel-title btn btn-link"
        >
          <div class="theme-panel-title">
            <div class="theme-group theme-col-2">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                Version 1 Version 1
              </div>
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                (Read Only)
              </div>
            </div>
            <div class="theme-undefined theme-col-2">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                03/02/2017 14:44:55
              </div>
            </div>
          </div>
        </button>
        <coral.tooltip title="Expand panel"
                       placement="top"
        >
          <coral.toggle class="theme-toggle toggle tc-icon-toggle theme-tc-icon-toggle"
                        icon="talend-caret-down"
          >
            Expand panel
          </coral.toggle>
        </coral.tooltip>
      </div>
    </div>
  </div>
  <div class="panel-collapse collapse">
    <div class="panel-body">
      <div class="theme-content">
        <div class="theme-head">
          <span aria-describedby="42">
            21 step
          </span>
          <span class="text-right"
                aria-describedby="42"
          >
            by Abdelaziz Maalej test 1 test 2 test 1 test 2
          </span>
        </div>
        <div class="theme-content-description content-description">
          Lorem ipsum dolor sit amet, consectv eturelit Lorem  adipiscing elit.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
		 consectetur adipiscing elit Lorem ipsum dolor sit nsectetur adipiscing elit Lorem
		ipsum dolor sit amet, consectetur adipiscing elit Lorem dolor sit amet, consectetur
		 adipiscing elitipsum dolor sit amet, consectv eturelit Lorem  adipis decing elit.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
		 consectetur adipiscing elit Lorem ipsum dolor sit nsectetur adipiscing elit Lorem
		ipsum dolor sit amet, consectetur adipiscing elit Lorem dolor sit amet, consectetur
		 adipiscing elit
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render themed without textual content 1`] = `
<div class="panel panel-default theme-tc-collapsible-panel theme-default-panel panel panel-default">
  <div class="panel-heading">
    <div class="panel-title">
      <div class="theme-panel-header-content panel-header-content">
        <button type="button"
                class="theme-panel-title btn btn-link"
        >
          <div class="theme-panel-title">
            <div class="theme-group theme-col-2">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                Version 1 Version 1
              </div>
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                (Read Only)
              </div>
            </div>
            <div class="theme-undefined theme-col-2">
              <div class="theme-undefined"
                   aria-describedby="42"
              >
                03/02/2017 14:44:55
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="panel-collapse collapse">
    <div class="panel-body">
    </div>
  </div>
</div>
`;
